feat: update vocabulary example and other field
